--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -155,30 +155,32 @@ section {
 .resume .description {
   color: #757575;
 }
-.resume-button{
+.resume-button {
   margin-top: 50px;
   text-align: center;
 }
 
 /* contact styles */
-.contact{
+.contact {
   display: flex;
   gap: 100px;
-  background: #FFF8F3;
+  background: #fff8f3;
   padding: 130px 200px;
 }
-.contact .section-title{
+.contact .section-title {
   text-align: left;
 }
-.contact input[type="text"], input[type="email"], textarea{
+.contact input[type="text"],
+input[type="email"],
+textarea {
   margin-bottom: 24px;
   border: 0;
   width: 100%;
   padding: 18px 30px;
 }
-input{
+input {
   height: 64px;
 }
-.contact a{
+.contact a {
   text-decoration: none;
 }
