--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,3 +184,65 @@ input {
 .contact a {
   text-decoration: none;
 }
+
+
+/* Responsive website */
+@media screen and (max-width: 576px) {
+  .header {
+    background-image: none;
+  }
+  .header h2{
+    padding-left: 12px;
+  }
+  nav,
+  .banner,
+  .skills-container,
+  .resume-content,
+  .about-info-container,
+  .contact {
+    flex-direction: column;
+    padding: 10px 20px;
+    gap: 20px;
+  }
+  nav ul {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    margin-left: -75px;
+  }
+  .about,
+  .contact {
+    padding: 20px;
+  }
+  .contact input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: 0 0 0 5px;
+  }
+  .banner {
+    margin: 0 20px;
+  }
+  .banner img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 992px) {
+  .about,
+  .contact {
+    padding: 20px;
+    gap: 10px;
+  }
+  .contact,
+  .banner {
+    flex-direction: column;
+  }
+  .contact input[type="text"],
+  input[type="email"],
+  textarea {
+    padding: 0 0 0 5px;
+  }
+  .resume-content {
+    padding-left: 10px;
+  }
+}
